feat(adapters): add OpenAI Chat Completion / Responses serve module (#1182)
Ref: #1176

Signed-off-by: Lukáš Janeček <xjacka@gmail.com>
Co-authored-by: Tomáš Dvořák <toomas2d@gmail.com>

--- a/docs/integrations/mcp.mdx
+++ b/docs/integrations/mcp.mdx
@@ -42,7 +42,7 @@ Key benefits
 	
 	def main() -> None:
 	    # create an MCP server with custom config, register ReverseTool and OpenMeteoTool to the MCP server and run it
-	    MCPServer(config=MCPServerConfig(transport="sse", settings=MCPSettings(port=8001))).register_many(
+	    MCPServer(config=MCPServerConfig(transport="streamable-http", settings=MCPSettings(port=8001))).register_many(
 	        [reverse_tool, OpenMeteoTool()]
 	    ).serve()
 	
