--- a/docs/integrations/openai-api.mdx
+++ b/docs/integrations/openai-api.mdx
@@ -30,7 +30,7 @@ Key benefits
 	
 	
 	def main() -> None:
-	    llm = ChatModel.from_name("ollama:granite3.3:8b")
+	    llm = ChatModel.from_name("ollama:granite4:micro")
 	    agent = RequirementAgent(
 	        llm=llm,
 	        tools=[DuckDuckGoSearchTool(), OpenMeteoTool()],
