--- a/python/examples/notebooks/agents.ipynb
+++ b/python/examples/notebooks/agents.ipynb
@@ -44,7 +44,7 @@
     "from beeai_framework.memory import UnconstrainedMemory\n",
     "\n",
     "# Construct ChatModel\n",
-    "chat_model: ChatModel = ChatModel.from_name(\"ollama:granite3.3:8b\")\n",
+    "chat_model: ChatModel = ChatModel.from_name(\"ollama:granite4:micro\")\n",
     "\n",
     "# Construct Agent instance with the chat model\n",
     "agent = ReActAgent(llm=chat_model, tools=[], memory=UnconstrainedMemory())\n",
@@ -117,7 +117,7 @@
     "from beeai_framework.backend import ChatModel\n",
     "from beeai_framework.tools.weather import OpenMeteoTool\n",
     "\n",
-    "chat_model: ChatModel = ChatModel.from_name(\"ollama:granite3.3:8b\")\n",
+    "chat_model: ChatModel = ChatModel.from_name(\"ollama:granite4:micro\")\n",
     "\n",
     "# create an agent using the default LLM and add the OpenMeteoTool that is capable of fetching weather-based information\n",
     "agent = ReActAgent(llm=chat_model, tools=[OpenMeteoTool()], memory=UnconstrainedMemory())\n",
@@ -210,7 +210,7 @@
     "            return f\"Error searching Wikipedia: {e!s}\"\n",
     "\n",
     "\n",
-    "chat_model: ChatModel = ChatModel.from_name(\"ollama:granite3.3:8b\")\n",
+    "chat_model: ChatModel = ChatModel.from_name(\"ollama:granite4:micro\")\n",
     "agent = ReActAgent(llm=chat_model, tools=[LangChainWikipediaTool()], memory=UnconstrainedMemory())\n",
     "\n",
     "result: ReActAgentRunOutput = await agent.run(\"Who is the current president of the European Commission?\").observe(\n",
@@ -288,7 +288,7 @@
     "\n",
     "\n",
     "# using the tool in an agent\n",
-    "chat_model: ChatModel = ChatModel.from_name(\"ollama:granite3.3:8b\")\n",
+    "chat_model: ChatModel = ChatModel.from_name(\"ollama:granite4:micro\")\n",
     "agent = ReActAgent(llm=chat_model, tools=[langchain_wikipedia_tool], memory=UnconstrainedMemory())\n",
     "\n",
     "result: ReActAgentRunOutput = await agent.run(\"What is the longest living vertebrate?\").observe(observer)"
