--- a/python/examples/notebooks/agents_colab.ipynb
+++ b/python/examples/notebooks/agents_colab.ipynb
@@ -136,7 +136,7 @@
    "outputs": [],
    "source": [
     "# Construct ChatModel\n",
-    "chat_model = ChatModel.from_name(\"ollama:granite3.3:8b\")\n",
+    "chat_model = ChatModel.from_name(\"ollama:granite4:micro\")\n",
     "\n",
     "# Construct Agent instance with the chat model\n",
     "agent = RequirementAgent(llm=chat_model, tools=[], memory=UnconstrainedMemory())\n",
