--- a/docs/integrations/a2a.mdx
+++ b/docs/integrations/a2a.mdx
@@ -120,7 +120,7 @@ The **[Agent2Agent (A2A) Protocol](https://a2a-protocol.org/)** is the open stan
 	
 	
 	def main() -> None:
-	    llm = ChatModel.from_name("ollama:granite3.3:8b")
+	    llm = ChatModel.from_name("ollama:granite4:micro")
 	    agent = RequirementAgent(
 	        llm=llm,
 	        tools=[DuckDuckGoSearchTool(), OpenMeteoTool()],
