--- a/docs/integrations/watsonx-orchestrate.mdx
+++ b/docs/integrations/watsonx-orchestrate.mdx
@@ -96,7 +96,7 @@ This enables you to register and use your local BeeAI agents as external agents 
 	
 	
 	def main() -> None:
-	    llm = ChatModel.from_name("ollama:granite3.3:8b")
+	    llm = ChatModel.from_name("ollama:granite4:micro")
 	    agent = RequirementAgent(llm=llm, tools=[OpenMeteoTool()], memory=UnconstrainedMemory(), role="a weather agent")
 	
 	    config = WatsonxOrchestrateServerConfig(port=8080, host="0.0.0.0", api_key=None)  # optional
