--- a/docs/modules/memory.mdx
+++ b/docs/modules/memory.mdx
@@ -210,7 +210,7 @@ memory = UnconstrainedMemory()
 
 
 def create_agent() -> ReActAgent:
-    llm = ChatModel.from_name("ollama:granite3.3:8b")
+    llm = ChatModel.from_name("ollama:granite4:micro")
 
     # Initialize the agent
     agent = ReActAgent(llm=llm, memory=memory, tools=[])
@@ -567,7 +567,7 @@ from beeai_framework.memory import SummarizeMemory
 async def main() -> None:
     # Initialize the LLM with parameters
     llm = ChatModel.from_name(
-        "ollama:granite3.3:8b",
+        "ollama:granite4:micro",
         # ChatModelParameters(temperature=0),
     )
 
