docs: update examples
Signed-off-by: Tomáš Dvořák <toomas2d@gmail.com>

--- a/python/examples/notebooks/basics.ipynb
+++ b/python/examples/notebooks/basics.ipynb
@@ -207,7 +207,7 @@
     "from beeai_framework.backend import ChatModel, ChatModelOutput\n",
     "\n",
     "# Create a ChatModel to interface with granite3.3:8b on a local ollama\n",
-    "model = ChatModel.from_name(\"ollama:granite4:micro\")\n",
+    "model = ChatModel.from_name(\"ollama:granite3.3\")\n",
     "\n",
     "output: ChatModelOutput = await model.run([user_message])\n",
     "\n",
