--- a/python/examples/notebooks/basics_colab.ipynb
+++ b/python/examples/notebooks/basics_colab.ipynb
@@ -262,7 +262,7 @@
    "execution_count": null,
    "source": [
     "# Construct ChatModel\n",
-    "model = ChatModel.from_name(\"ollama:granite4:micro\")\n",
+    "model = ChatModel.from_name(\"ollama:granite3.3\")\n",
     "\n",
     "question1 = \"Briefly explain quantum computing in simple terms with an example.\"\n",
     "message = UserMessage(content=question1)\n",
