chore: update examples
Signed-off-by: Tomáš Dvořák <toomas2d@gmail.com>

--- a/docs/modules/tools.mdx
+++ b/docs/modules/tools.mdx
@@ -283,7 +283,7 @@ import asyncio
 import sys
 import traceback
 
-from beeai_framework.agents.react import ReActAgent
+from beeai_framework.agents.requirement import RequirementAgent
 from beeai_framework.backend import ChatModel
 from beeai_framework.errors import FrameworkError
 from beeai_framework.memory import UnconstrainedMemory
@@ -291,8 +291,8 @@ from beeai_framework.tools.search.duckduckgo import DuckDuckGoSearchTool
 
 
 async def main() -> None:
-    chat_model = ChatModel.from_name("ollama:llama3.1")
-    agent = ReActAgent(llm=chat_model, tools=[DuckDuckGoSearchTool()], memory=UnconstrainedMemory())
+    chat_model = ChatModel.from_name("ollama:granite4:micro")
+    agent = RequirementAgent(llm=chat_model, tools=[DuckDuckGoSearchTool()], memory=UnconstrainedMemory())
 
     result = await agent.run("How tall is the mount Everest?")
 
