fix(adapter): Fix context in BeeAIPlatformAgent (#1247)
Ref: #1246

Signed-off-by: Lukáš Janeček <xjacka@gmail.com>

--- a/docs/integrations/beeai-platform.mdx
+++ b/docs/integrations/beeai-platform.mdx
@@ -52,7 +52,7 @@ Here's a simple example that uses the built-in `chat` agent:
 	    reader = ConsoleReader()
 	
 	    agents = await BeeAIPlatformAgent.from_platform(url="http://127.0.0.1:8333", memory=UnconstrainedMemory())
-	    agent_name = "Granite chat agent"
+	    agent_name = "Framework chat agent"
 	    try:
 	        agent = next(agent for agent in agents if agent.name == agent_name)
 	    except StopIteration:
