chore: regenerate docs
Signed-off-by: Tomáš Dvořák <toomas2d@gmail.com>

--- a/docs/modules/cache.mdx
+++ b/docs/modules/cache.mdx
@@ -603,8 +603,7 @@ from typing import TypeVar
 
 from beeai_framework.cache import UnconstrainedCache
 from beeai_framework.errors import FrameworkError
-
-from .file_cache import JsonFileCache  # noqa: TID252
+from examples.cache.file_cache import JsonFileCache
 
 T = TypeVar("T")
 
